--- a/index.html
+++ b/index.html
@@ -211,6 +211,309 @@
         <button>Learn More</button>
     </section>
     <section class="impact-report">
+        <img src="https://media.contentapi.ea.com/content/dam/eacom/commitments/common/commitments-impact-report-2024-50-50-section-16x9.jpg.adapt.1456w.jpg">
+        <div class="info-impact-report">
+            <p>How our incredibly talented, values-driven teams are continuously working to help foster lasting impact to lead the future of entertainment.</p>
+            <button>Learn More</button>
+            <button>Read The Report</button>
+        </div>
+    </section>
+    <section class="condiciones">
+        <p>*CONDITIONS, LIMITATIONS AND EXCLUSIONS APPLY. SEE <a href="https://www.ea.com/legal/ea-play-terms">EA PLAY TERMS</a> FOR DETAILS.</p>
+        <hr>
+    </section>
+</body>
+<footer>
+    <section class="equipo-ea">
+        <div class="link">
+            <a href="https://www.ea.com/careers">Careers</a>
+            <a href="https://www.ea.com/executives">Executives</a>
+            <a href="https://www.ea.com/news/2024-impact-report">Impact Report</a>
+            <a href="https://www.ea.com/commitments">Our Commitments</a>
+            <a href="https://www.ea.com/brand-partnerships">Partner With Us</a>
+        </div>
+        <div class="contacto">
+            <h3>Join The Conversation</h3>
+            <a href="https://www.facebook.com/EA/">
+                <img src="./Archivos/IMG/facebook.png" alt="Facebook">
+            </a>
+            <a href="https://www.twitter.com/ea">
+                <img src="./Archivos/IMG/Twitter.png" alt="X">
+            </a>
+            <a href="https://www.youtube.com/EA">
+                <img src="./Archivos/IMG/youtube.png" alt="Youtube">
+            </a>
+            <a href="https://www.instagram.com/ea">
+                <img src="./Archivos/IMG/instagram.png" alt="Instagram">
+            </a>
+            <a href="https://www.twitch.tv/ea">
+                <img src="./Archivos/IMG/twitch.png" alt="Twitch">
+            </a>
+            <a href="https://www.linkedin.com/company/electronic-arts/">
+                <img src="./Archivos/IMG/linkedin.png" alt="Linkedin">
+            </a>
+        </div>
+    </section>
+    <section class="terminos-y-condiciones">
+        <div class="logo-footer">
+            <a href="https://www.ea.com/">
+                <img src="https://media.contentapi.ea.com/content/dam/eacom/common/medallion-violet.png" alt="">
+            </a>  
+        </div>
+        <div class="cajon">
+            <div class="links">
+                <div class="links-1">
+                    <a href="">Game Library</a>
+                    <a href="">Subscribe</a>
+                    <a href="">Redeem Code</a>
+                    <a href="">EA app</a>
+                    <a href="">About</a>
+                    <a href="">Accessibility</a>
+                    <a href="">Help</a>
+                    <a href="">Forums</a>
+                </div>
+                <div class="idiomas">
+                    <button>
+                        <div class="lenguaje">Language</div>
+                        <div class="pais">United States</div>
+                    </button>
+                </div>
+            </div>
+            <div class="cajon-2">
+                <div class="cajon-3">
+                    <div class="terminos-legales">
+                        <a href="http://www.ea.com/legal">Legal & Privacy</a>
+                        <a href="https://www.ea.com/terms-of-service">User Agreement</a>
+                        <a href="https://www.ea.com/legal/privacy-and-cookie-policy">Privacy & Cookie Policy</a>
+                        <a href="https://www.ea.com/service-updates">Online Service Updates</a>
+                        <a href="https://www.ea.com/security">Security</a>
+                    </div>
+                    <div class="derechos">
+                            &copy;2025 Electronic Arts Inc.
+                    </div>
+                </div>
+                <div class="verificacion">
+                    <a href="https://privacy.truste.com/privacy-seal/validation?rid=f1a11c5d-0232-4077-8498-2e69a38c1335">
+                        <img src="https://privacy-policy.truste.com/privacy-seal/seal?rid=f1a11c5d-0232-4077-8498-2e69a38c1335" alt="Verificacion">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+</footer>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Electronic Arts Home Page - Office EA Site</title>
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+    <section class="nav-ea">
+    <a href="">
+        <img src="./Archivos/IMG/icono usuario.png" alt="" class="user">
+    </a>
+    <a href="">
+        <img src="./Archivos/IMG/icono interrogacion.png" alt="" class="help">
+    </a>
+    <a href="">
+        <img src="./Archivos/IMG/artes-de-la-electronica.png" alt="" class="ea-logo">
+    </a>
+    </section>
+    <section class="nav-barra">
+        <a href="">
+            <img src="./Archivos/IMG/tres-puntos.png" alt="icono" class="icono-tres-puntos">
+        </a>
+        <a href="https://www.ea.com/es-es">
+            <img src="./Archivos/IMG/logo-2-ea.png" alt="logo-2" class="ea-logo-2">
+        </a>
+        <div class="nav-color">
+            <a href="" class="juegos">GAMES</a>
+            <a href="" class="experiencias">EXPERIENCES</a>
+            <a href="" class="acerca_de">ABOUT</a>
+            <a href="" class="compromisos">COMMITMENTS</a>
+            <a href="" class="recursos">RESOURCES</a>
+        </div>
+
+    </section>
+    <section class="about">
+        <div class="text">
+            <img src="https://media.contentapi.ea.com/content/dam/battlefield/common/logos/battlefield-6-logo.svg" alt="">
+            <div class="video-background">
+                <video autoplay muted loop>
+                    <source src="./Archivos/VID/Battle.mp4" type="video/mp4" />
+                </video>
+            </div>
+            <p><b>The wait is over. Experience all-out warfare today.</b></p>
+            <a href="indexcarousel.html">
+                <button class="comprar">BUY NOW</button>
+            </a>
+            <button class="trailer">WATCH TRAILER</button>
+        </div>
+    </section>
+   <!-- <section class="info_1">
+        <div class="text-info">
+            <h2>Try NHL 26 for 10 hours with EA Play.</h2>
+        </div>
+
+        <div class="img-info">
+            <a href="#"><img src="./Archivos/IMG/ea-play-logo-coral-cta-type-image.png" alt=""></a>
+            <button>Join Now</button>
+        </div>
+    </section> -->
+    <h3 class="text2">Featured Games</h3>
+    <section class="juegos-destacados">
+        <a href="#" class="juegoX1">
+            <div>
+                <img src="./Archivos/IMG/battlefield.png" alt="">
+            </div>
+        </a>
+        <a href="" class="juegoX2">
+            <div>
+                <img src="./Archivos/IMG/fc26.png"
+                    alt="FC_26">
+            </div>
+        </a>
+        <a href="" class="juegoX3">
+            <div>
+                <img src="./Archivos/IMG/F1_25_logo.png"
+                    alt="F1_25">
+            </div>
+        </a>
+        <a href="" class="juegoX4">
+            <div>
+                <img src="./Archivos/IMG/split-fiction.png"
+                    alt="Split_Fiction">
+            </div>            
+        </a>
+        <a href="" class="juegoX5">
+            <div>
+                <img src="./Archivos/IMG/The-Sims.png"
+                    alt="Los_Sims">
+            </div>
+        </a>
+        <a href="" class="juegoX6">
+            <div>
+                <img src="./Archivos/IMG/apex.png"
+                    alt="Apex_legends">
+            </div>
+        </a>
+    </section>
+    <section class="latest-games">
+        <button>Latest Games</button>
+    </section>
+
+    <h1 class="latest-text">Latest Updates</h1>
+    <section class="latest-updates">
+        <a href="" class="card1">
+            <div>
+                <img src="./Archivos/IMG/card1.jpg" alt="">
+                <div class="EAI">
+                    <p>Electronic Arts Inc.</p>
+                </div>
+                <div class="date">
+                    <p>Aug 29, 2025</p>
+                </div>
+                <h2>
+                    EA SPORTS FC 26 revealed as our most community-driven game yet
+                </h2>
+                <p class="text3">EA SPORTS FC 26 launches September 26, 2025, and is your most community-driven FC ever , featuring refined gameplay fundamentals archetypes, and more.</p>
+            </div>
+        </a>
+        <a href="" class="card2">
+            <div>
+                <img src="./Archivos/IMG/card2.jpg" alt="">
+                <div class="EAI">
+                    <p>Electronic Arts Inc.</p>
+                </div>
+                <div class="date">
+                    <p>Aug 29, 2025</p>
+                </div>
+                <h2>
+                    EA SPORTS FC 26 revealed as our most community-driven game yet
+                </h2>
+                <p class="text3">EA SPORTS FC 26 launches September 26, 2025, and is your most community-driven FC ever , featuring refined gameplay fundamentals archetypes, and more.</p>
+            </div>
+        </a>
+        <a href="" class="card3">
+            <div>
+                <img src="./Archivos/IMG/card3.jpg" alt="">
+                <div class="EAI">
+                    <p>Electronic Arts Inc.</p>
+                </div>
+                <div class="date">
+                    <p>Aug 29, 2025</p>
+                </div>
+                <h2>
+                    EA SPORTS FC 26 revealed as our most community-driven game yet
+                </h2>
+                <p class="text3">EA SPORTS FC 26 launches September 26, 2025, and is your most community-driven FC ever , featuring refined gameplay fundamentals archetypes, and more.</p>
+            </div>
+        </a>
+        <a href="" class="card4">
+            <div>
+                <img src="./Archivos/IMG/card4.png" alt="">
+                <div class="EAI">
+                    <p>Electronic Arts Inc.</p>
+                </div>
+                <div class="date">
+                    <p>Aug 29, 2025</p>
+                </div>
+                <h2>
+                    EA SPORTS FC 26 revealed as our most community-driven game yet
+                </h2>
+                <p class="text3">EA SPORTS FC 26 launches September 26, 2025, and is your most community-driven FC ever , featuring refined gameplay fundamentals archetypes, and more.</p>
+            </div>
+        </a>
+        <a href="" class="card5">
+            <div>
+                <img src="./Archivos/IMG/card3.jpg" alt="">
+                <div class="EAI">
+                    <p>Electronic Arts Inc.</p>
+                </div>
+                <div class="date">
+                    <p>Aug 29, 2025</p>
+                </div>
+                <h2>
+                    EA SPORTS FC 26 revealed as our most community-driven game yet
+                </h2>
+                <p class="text3">EA SPORTS FC 26 launches September 26, 2025, and is your most community-driven FC ever , featuring refined gameplay fundamentals archetypes, and more.</p>
+            </div>
+        </a>
+        <a href="" class="card6">
+            <div>
+                <img src="./Archivos/IMG/card6.png" alt="">
+                <div class="EAI">
+                    <p>Electronic Arts Inc.</p>
+                </div>
+                <div class="date">
+                    <p>Aug 29, 2025</p>
+                </div>
+                <h2>
+                    EA SPORTS FC 26 revealed as our most community-driven game yet
+                </h2>
+                <p class="text3">EA SPORTS FC 26 launches September 26, 2025, and is your most community-driven FC ever , featuring refined gameplay fundamentals archetypes, and more.</p>
+            </div>
+        </a>
+    </section>
+
+    <section class="ea-play">
+        <div class="ea-play-text">
+            <img src="./Archivos/IMG/ea-play-logo-coral-cta-type-image.png" alt="">
+            <h3>Unlock a world of thrill</h3>
+            <p>Experience unlimited access to a collection of top EA titles, trials of select new games and more.</p>
+            <button>Join Now</button>
+        </div>
+    </section>
+
+    <section class="banner-celeste">
+        <div class="text-banner-celeste">
+            <h1>Players and Parents: Video Game control is in your <br>hands</h1>
+        </div>
+        <button>Learn More</button>
+    </section>
+    <section class="impact-report">
         <img src="https://media.contentapi.ea.com/content/dam/eacom/commitments/common/ea-impact-report-2025-cover-16x9.png.adapt.1920w.png">
         <div class="info-impact-report">
             <p>How our incredibly talented, values-driven teams are continuously working to help foster lasting impact to lead the future of entertainment.</p>
