--- a/index.html
+++ b/index.html
@@ -193,8 +193,10 @@
                 <p class="text3">EA SPORTS FC 26 launches September 26, 2025, and is your most community-driven FC ever , featuring refined gameplay fundamentals archetypes, and more.</p>
             </div>
         </a>
+        <div class="botonleer">
+            <button class="leermas">Read More</button>
+        </div>
     </section>
-
     <section class="ea-play">
         <div class="ea-play-text">
             <img src="./Archivos/IMG/ea-play-logo-coral-cta-type-image.png" alt="">
