--- a/index.html
+++ b/index.html
@@ -7,32 +7,33 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <section class="nav-ea">
-    <a href="">
-        <img src="./Archivos/IMG/icono usuario.png" alt="" class="user">
-    </a>
-    <a href="">
-        <img src="./Archivos/IMG/icono interrogacion.png" alt="" class="help">
-    </a>
-    <a href="">
-        <img src="./Archivos/IMG/artes-de-la-electronica.png" alt="" class="ea-logo">
-    </a>
-    </section>
-    <section class="nav-barra">
+    <section class="navega">
+        <section class="nav-ea">
         <a href="">
-            <img src="./Archivos/IMG/tres-puntos.png" alt="icono" class="icono-tres-puntos">
+            <img src="./Archivos/IMG/icono usuario.png" alt="" class="user">
         </a>
-        <a href="https://www.ea.com/es-es">
-            <img src="./Archivos/IMG/logo-2-ea.png" alt="logo-2" class="ea-logo-2">
+        <a href="">
+            <img src="./Archivos/IMG/icono interrogacion.png" alt="" class="help">
         </a>
-        <div class="nav-color">
-            <a href="" class="juegos">GAMES</a>
-            <a href="" class="experiencias">EXPERIENCES</a>
-            <a href="" class="acerca_de">ABOUT</a>
-            <a href="" class="compromisos">COMMITMENTS</a>
-            <a href="" class="recursos">RESOURCES</a>
-        </div>
-
+        <a href="">
+            <img src="./Archivos/IMG/artes-de-la-electronica.png" alt="" class="ea-logo">
+        </a>
+        </section>
+        <section class="nav-barra">
+            <a href="">
+                <img src="./Archivos/IMG/tres-puntos.png" alt="icono" class="icono-tres-puntos">
+            </a>
+            <a href="https://www.ea.com/es-es">
+                <img src="./Archivos/IMG/logo-2-ea.png" alt="logo-2" class="ea-logo-2">
+            </a>
+            <div class="nav-color">
+                <a href="" class="juegos">GAMES</a>
+                <a href="" class="experiencias">EXPERIENCES</a>
+                <a href="" class="acerca_de">ABOUT</a>
+                <a href="" class="compromisos">COMMITMENTS</a>
+                <a href="" class="recursos">RESOURCES</a>
+            </div>
+        </section>
     </section>
     <section class="about">
         <div class="text">
