--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="navega">
         <section class="nav-ea">
         <a href="">
-            <img src="./Archivos/IMG/icono usuario.png" alt="" class="user">
+            <img src="./Archivos/IMG/icono_usuario.png" alt="" class="user">
         </a>
         <a href="">
             <img src="./Archivos/IMG/icono interrogacion.png" alt="" class="help">
