--- a/indexcarousel.html
+++ b/indexcarousel.html
@@ -41,15 +41,15 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="./Archivos/IMG/WildHearts.jpg" class="d-block w-100" alt="...">
-                        <button class="btn-carousel">Buy Now</button>
+                        <a href="./indexcompra.html"><button class="btn-carousel">Buy Now</button></a>
                     </div>
                     <div class="carousel-item">
                         <img src="./Archivos/IMG/Formula1-2023.jpg" class="d-block w-100" alt="...">
-                        <button class="btn-carousel">Buy Now</button>
+                        <a href="./indexcompra.html"><button class="btn-carousel">Buy Now</button></a>
                     </div>
                     <div class="carousel-item">
                         <img src="./Archivos/IMG/Inmortals.jpg" class="d-block w-100" alt="...">
-                        <button class="btn-carousel">Buy Now</button>
+                        <a href="./indexcompra.html"><button class="btn-carousel">Buy Now</button></a>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
