--- a/indexcompra.html
+++ b/indexcompra.html
@@ -41,7 +41,7 @@
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav">
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    <a class="nav-link dropdown-toggle" href="#" role="button"
                                         aria-expanded="false">
                                         ACERCA DE
                                     </a>
