--- a/indexcompra.html
+++ b/indexcompra.html
@@ -17,6 +17,8 @@
 </head>
 
 <body>
+
+    <!--Header 1 y 2 -->
     <section>
         <header class="header1">
             <div class="ea">
@@ -93,6 +95,15 @@
                 <button>COMPRAR YA</button>
             </div>
         </header>
+    </section>
+
+    <!--Comprar -->
+    <section class="compra">
+        <h1>
+            BATTLEFIELD 6
+        </h1>
+
+        <img src="https://drop-assets.ea.com/images/2I7VhVjwdzBgmbpeldmM8t/4f2dcad2d115abd786aa2bb9ff38d89f/battlefield-6-standard-edition-16x9.jpg?im=Resize=(2560)&q=80" alt="">
     </section>
 </body>
 
