--- a/indexcarousel.html
+++ b/indexcarousel.html
@@ -18,7 +18,7 @@
 
 <body class="carousel">
     <section class="nav-ea">
-        <a href="" class="Banner_compra">Electronis arts</a>
+        <a href="index.html" class="Banner_compra">Electronis arts</a>
         <button class="btnuser">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person"
                 viewBox="0 0 16 16">
