--- a/indexcompra.html
+++ b/indexcompra.html
@@ -43,8 +43,7 @@
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav">
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button"
-                                        aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" href="#" role="button" aria-expanded="false">
                                         ACERCA DE
                                     </a>
                                     <ul class="dropdown-menu">
@@ -99,11 +98,22 @@
 
     <!--Comprar -->
     <section class="compra">
-        <h1>
-            BATTLEFIELD 6
-        </h1>
+        <div class="enunciado">
+            <h1>
+                BATTLEFIELD 6
+            </h1>
 
-        <img src="https://drop-assets.ea.com/images/2I7VhVjwdzBgmbpeldmM8t/4f2dcad2d115abd786aa2bb9ff38d89f/battlefield-6-standard-edition-16x9.jpg?im=Resize=(2560)&q=80" alt="">
+            <img src="https://drop-assets.ea.com/images/2I7VhVjwdzBgmbpeldmM8t/4f2dcad2d115abd786aa2bb9ff38d89f/battlefield-6-standard-edition-16x9.jpg?im=Resize=(2560)&q=80"
+                alt="">
+
+            <p>Battlefield 6 ya casi está aquí. La experiencia definitiva de la guerra total. Lucha en combates de infantería de alta intensidad. Atraviesa los cielos en combate aéreo. Destruye tu entorno y saca ventaja estratégica. Comanda el ataque en Battlefield 6 el 10 de octubre.</p>
+        </div>
+
+        <div class="apartado">
+            <img src="https://img.asmedia.epimg.net/resizer/v2/GUWSE5GV7BH75K6Y5V7GAOXM4M.jpg?auth=9d31ec79945e3b65fd1a72ce538c8e21e989d1a5d5c3f1b52287ca4b1cb0590d&width=360&height=203&smart=true" alt="">
+
+            
+        </div>
     </section>
 </body>
 
