--- a/index.html
+++ b/index.html
@@ -107,11 +107,13 @@
         <a href="" class="card1">
             <div>
                 <img src="./Archivos/IMG/card1.jpg" alt="">
-                <div class="EAI">
-                    <p>Electronic Arts Inc.</p>
-                </div>
-                <div class="date">
-                    <p>Aug 29, 2025</p>
+                <div class="EAIS">
+                    <div class="EAI">
+                        <p>Electronic Arts Inc.</p>
+                    </div>
+                    <div class="date">
+                        <p>Aug 29, 2025</p>
+                    </div>
                 </div>
                 <h2>
                     EA SPORTS FC 26 revealed as our most community-driven game yet
@@ -122,11 +124,13 @@
         <a href="" class="card2">
             <div>
                 <img src="./Archivos/IMG/card2.jpg" alt="">
-                <div class="EAI">
-                    <p>Electronic Arts Inc.</p>
-                </div>
-                <div class="date">
-                    <p>Aug 29, 2025</p>
+                <div class="EAIS">
+                    <div class="EAI">
+                        <p>Electronic Arts Inc.</p>
+                    </div>
+                    <div class="date">
+                        <p>Aug 29, 2025</p>
+                    </div>
                 </div>
                 <h2>
                     EA SPORTS FC 26 revealed as our most community-driven game yet
@@ -137,11 +141,13 @@
         <a href="" class="card3">
             <div>
                 <img src="./Archivos/IMG/card3.jpg" alt="">
-                <div class="EAI">
-                    <p>Electronic Arts Inc.</p>
-                </div>
-                <div class="date">
-                    <p>Aug 29, 2025</p>
+                <div class="EAIS">
+                    <div class="EAI">
+                        <p>Electronic Arts Inc.</p>
+                    </div>
+                    <div class="date">
+                        <p>Aug 29, 2025</p>
+                    </div>
                 </div>
                 <h2>
                     EA SPORTS FC 26 revealed as our most community-driven game yet
@@ -152,11 +158,13 @@
         <a href="" class="card4">
             <div>
                 <img src="./Archivos/IMG/card4.png" alt="">
-                <div class="EAI">
-                    <p>Electronic Arts Inc.</p>
-                </div>
-                <div class="date">
-                    <p>Aug 29, 2025</p>
+                <div class="EAIS">
+                    <div class="EAI">
+                        <p>Electronic Arts Inc.</p>
+                    </div>
+                    <div class="date">
+                        <p>Aug 29, 2025</p>
+                    </div>
                 </div>
                 <h2>
                     EA SPORTS FC 26 revealed as our most community-driven game yet
@@ -167,11 +175,13 @@
         <a href="" class="card5">
             <div>
                 <img src="./Archivos/IMG/card3.jpg" alt="">
-                <div class="EAI">
-                    <p>Electronic Arts Inc.</p>
-                </div>
-                <div class="date">
-                    <p>Aug 29, 2025</p>
+                <div class="EAIS">
+                    <div class="EAI">
+                        <p>Electronic Arts Inc.</p>
+                    </div>
+                    <div class="date">
+                        <p>Aug 29, 2025</p>
+                    </div>
                 </div>
                 <h2>
                     EA SPORTS FC 26 revealed as our most community-driven game yet
@@ -182,11 +192,13 @@
         <a href="" class="card6">
             <div>
                 <img src="./Archivos/IMG/card6.png" alt="">
-                <div class="EAI">
-                    <p>Electronic Arts Inc.</p>
-                </div>
-                <div class="date">
-                    <p>Aug 29, 2025</p>
+                <div class="EAIS">
+                    <div class="EAI">
+                        <p>Electronic Arts Inc.</p>
+                    </div>
+                    <div class="date">
+                        <p>Aug 29, 2025</p>
+                    </div>
                 </div>
                 <h2>
                     EA SPORTS FC 26 revealed as our most community-driven game yet
