--- a/indexcompra.html
+++ b/indexcompra.html
@@ -145,6 +145,37 @@
         </div>
     </section>
 
+    <!-- Footer -->
+
+    <section class="footer1">
+        <footer class="footer2">
+            <div class="redes">
+                <img src="./Archivos/IMG/facebook.png" alt="">
+                <img src="./Archivos/IMG/instagram.png" alt="">
+                <img src="./Archivos/IMG/twitch.png" alt="">
+                <img src="./Archivos/IMG/Twitter.png" alt="">
+                <img src="./Archivos/IMG/youtube.png" alt="">
+            </div>
+
+            <hr>
+
+            <div class="logoea">
+                <img src="./Archivos/IMG/logo-2-ea.png" alt="">
+
+                <div class="clasificacion">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWF0CcAeHqzcp-Ua36FyOYXCv08YIPewpJ2Q&s"
+                        alt="">
+                </div>
+            </div>
+
+            <hr>
+
+            <div>
+                <p>© 2023 Electronic Arts Inc. Todos los derechos reservados.</p>
+            </div>
+        </footer>
+    </section>
+
     <script src="./js/script.js"></script>
 </body>
 
