--- a/indexcarousel.html
+++ b/indexcarousel.html
@@ -45,25 +45,25 @@
                 <div class="carousel-item active">
                     <img src="./Archivos/IMG/battlefieldV.png" class="d-block w-100" alt="Battlefield V">
                     <h1>Battlefield V</h1>
-                    <a href="./indexcompra.html"><button class="btn-carousel">Buy Now</button></a>
+                    <a href="./indexcompra1.html"><button class="btn-carousel">Buy Now</button></a>
                 </div>
 
                 <div class="carousel-item">
                     <img src="./Archivos/IMG/titanfall.jpg" class="d-block w-100" alt="Titan Fall">
                     <h1>Titan Fall</h1>
-                    <a href="./indexcompra.html"><button class="btn-carousel">Buy Now</button></a>
+                    <a href="./indexcompra2.html"><button class="btn-carousel">Buy Now</button></a>
                 </div>
 
                 <div class="carousel-item">
                     <img src="./Archivos/IMG/deadspace.jpg" class="d-block w-100" alt="Dead Space">
                     <h1>Dead Space</h1>
-                    <a href="./indexcompra.html"><button class="btn-carousel">Buy Now</button></a>
+                    <a href="./indexcompra3.html"><button class="btn-carousel">Buy Now</button></a>
                 </div>
 
                 <div class="carousel-item">
                     <img src="./Archivos/IMG/masseffect.jpg" class="d-block w-100" alt="Mass Effect 3">
                     <h1>Mass Effect 3</h1>
-                    <a href="./indexcompra.html"><button class="btn-carousel">Buy Now</button></a>
+                    <a href="./indexcompra4.html"><button class="btn-carousel">Buy Now</button></a>
                 </div>
             </div>
 
