--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         </section>
     </section>
     <section class="about">
-        <div class="text">
-            <img src="https://media.contentapi.ea.com/content/dam/battlefield/common/logos/battlefield-6-logo.svg" alt="">
-            <div class="video-background">
+        <div class="video-background">
                 <video autoplay muted loop>
-                    <source src="./Archivos/VID/Battle.mp4" type="video/mp4" />
+                    <source src="./Archivos/VID/Battle.mp4" type="video/mp4" style="width: 100%; height:10%;"/>
                 </video>
             </div>
+        <div class="text">
+            <img src="https://media.contentapi.ea.com/content/dam/battlefield/common/logos/battlefield-6-logo.svg" alt="">
             <p><b>The wait is over. Experience all-out warfare today.</b></p>
             <a href="indexcarousel.html">
                 <button class="comprar">BUY NOW</button>
